tests/parse/snapshots/file_tests__parse__class_decls.lx@empty_class.snap
---
source: tests/parse.rs
description: "class Foo { }\n\n"
expression: first_parse
---
class Foo {
}
