tests/parse/snapshots/file_tests__parse__class_decls.lx@empty_return_in_init.snap
---
source: tests/parse.rs
description: "class Foo {\n    init() {\n        return;\n    }\n}\n\n"
expression: first_parse
---
class Foo {
    init() {
        return;
    }
}
