tests/parse/snapshots/file_tests__parse__class_decls.lx@method_params_bodies.snap
---
source: tests/parse.rs
description: "class Haha {\n    foo(bar) {\n        return baz;\n    }\n\n    whee(yay, wahoo) {\n        this.wahoo = wahoo;\n        return yay + wahoo;\n    }\n}\n"
expression: first_parse
---
class Haha {
    foo(bar) {
        return baz;
    }
    whee(yay, wahoo) {
        this.wahoo = wahoo;
        return yay + wahoo;
    }
}
