tests/parse/snapshots/file_tests__parse__class_decls.lx@superclass.snap
---
source: tests/parse.rs
description: "class Foo < Bar {}\n"
expression: first_parse
---
class Foo < Bar {
}
