tests/parse/snapshots/file_tests__parse__class_decls.lx@two_empty_method.snap
---
source: tests/parse.rs
description: "class Another {\n    foo() {}\n    bar() {}\n}\n\n"
expression: first_parse
---
class Another {
    foo() {
    }
    bar() {
    }
}
