tests/parse/snapshots/file_tests__parse__err_decl_stmts.lx.snap
---
source: tests/parse.rs
description: "var = 4 + 4;\n\nvar lol = ;\n\nvar lmao = no // Should sync correctly and continue reporting errors\n\nvar = ;\n"
expression: render_dcx()
---
error: missing name in variable declaration
  --> err_decl_stmts.lx:1:5
  |
1 | var = 4 + 4;
  | --- ^ expected variable name here
  | |    
  | declaration requires a variable name
  |
  = note: expected identifier

error: statement terminated prematurely
  --> err_decl_stmts.lx:3:11
  |
3 | var lol = ;
  |           ^ statement terminated here
  |
  = note: expected expression

error: unterminated statement
  --> err_decl_stmts.lx:7:1
  |
5 | var lmao = no // Should sync correctly and continue reporting errors
  | ------------- this statement
6 | 
7 | var = ;
  | ^^^ statement should have been terminated here
  |
  = note: expected `;`

error: missing name in variable declaration
  --> err_decl_stmts.lx:7:5
  |
7 | var = ;
  | --- ^ expected variable name here
  | |    
  | declaration requires a variable name
  |
  = note: expected identifier
