tests/parse/snapshots/file_tests__parse__err_for_loops.lx@empty_fields_one_semi.snap
---
source: tests/parse.rs
description: "for (;) hey;\n"
expression: render_dcx()
---
error: parentheses closed prematurely
  --> err_for_loops.lx@empty_fields_one_semi:1:7
  |
1 | for (;) hey;
  |     - ^ parentheses closed here
  |     |  
  |     parentheses opened here
  |
  = note: expected expression
