tests/parse/snapshots/file_tests__parse__err_invalid_place_exprs.lx.snap
---
source: tests/parse.rs
description: "(a = b) = c;\n\n7 + 8 = 15;\n\nvar a = b + c = d;\n\n(a) = 4;\n"
expression: render_dcx()
---
error: invalid place expression on left side of assignment
  --> err_invalid_place_exprs.lx:1:1
  |
1 | (a = b) = c;
  | ^^^^^^^ - expected place expression due to assignment here
  | |        
  | invalid place expression
  |
  = note: expected identifier

error: invalid place expression on left side of assignment
  --> err_invalid_place_exprs.lx:3:1
  |
3 | 7 + 8 = 15;
  | ^^^^^ - expected place expression due to assignment here
  | |      
  | invalid place expression
  |
  = note: expected identifier

error: invalid place expression on left side of assignment
  --> err_invalid_place_exprs.lx:5:9
  |
5 | var a = b + c = d;
  |         ^^^^^ - expected place expression due to assignment here
  |         |      
  |         invalid place expression
  |
  = note: expected identifier

error: invalid place expression on left side of assignment
  --> err_invalid_place_exprs.lx:7:1
  |
7 | (a) = 4;
  | ^^^ - expected place expression due to assignment here
  | |    
  | invalid place expression
  |
  = note: expected identifier
